--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <link rel="icon" href="images/favicon.ico">
+      <link rel="icon" href="images/face.ico">
       <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
       <meta name="theme-color" content="#545DFF">
       <meta name="keywords" content="NFT, Dudes Club NFT, Collection, NFT Art, NFT Collection, ETH, Ethereum, Blockchain, Tech, Art, Crypto, Cryptocurrency">
