--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                <div class="relative max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 ">
                   <div class="flex items-center justify-between pt-10">
                      <div class="flex items-center">
-                        <div class="flex-shrink mr-2"><a href="https://www.superrocksnft.com" rel="noopener noreferrer nofollow"><img src="images/logo_dark.png" alt="super rocks logo" width="120" ></a></div>
+                        <div class="flex-shrink mr-2"><a href="https://www.dudesclubnft.xyz" rel="noopener noreferrer nofollow"><img src="images/logo_dark.png" alt="super rocks logo" width="120" ></a></div>
                         <div class="hidden items-center lg:flex space-x-4 sm:ml-6"><a href="#project" rel="noopener noreferrer nofollow" class="text-white hover:bg-white hover:text-landing px-3 py-2 rounded-md text-lg font-extrabold uppercase">Project</a><a href="#roadmap" rel="noopener noreferrer nofollow" class="text-white hover:bg-white hover:text-landing px-3 py-2 rounded-md text-lg font-extrabold uppercase">Roadmap</a><a href="#help" rel="noopener noreferrer nofollow" class="text-white hover:bg-white hover:text-landing px-3 py-2 rounded-md text-lg font-extrabold uppercase">FAQ</a><a href="#team" rel="noopener noreferrer nofollow" class="text-white hover:bg-white hover:text-landing px-3 py-2 rounded-md text-lg font-extrabold uppercase">Team</a></div>
                      </div>
                      <div class="items-center space-x-4 flex">
