--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                      <div class="items-center justify-center flex flex-col">
                         <img class="h-auto mx-auto" src="images/dudes.gif" alt="rock-promo">
                         <div class="xl:relative flex flex-col items-center justify-center w-2/3">
-                           <button id="saleMintButton" class="inline-flex justify-center min-w-90 sm:w-full uppercase rounded-full text-3xl lg:text-5xl px-12 py-5 mx-4 font-bold text-white bg-gradient-to-r from-mintGradient-from to-mintGradient-to hover:opacity-75" style="width: 400px;" >Mint</button>
+                           <a id="saleMintButton" class="inline-flex justify-center min-w-90 sm:w-full uppercase rounded-full text-3xl lg:text-5xl px-12 py-5 mx-4 font-bold text-white bg-gradient-to-r from-mintGradient-from to-mintGradient-to hover:opacity-75" style="width: 400px;" href="https://dudesclubnft.xyz/mint" >Mint</button>
                            
                         </div>
                      </div>
-                     <p class="text-white text-center text-4xl font-bold my-6">Mint Date - 14 Jan 2022</p>
+                     <p class="text-white text-center text-4xl font-bold my-6">Sale is Live</p>
                   </div>
                </div>
             </section>
