--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                            <a href="https://discord.gg/YEbZ6JJ5Qs" target="_blank" rel="noopener noreferrer nofollow" class="relative inline-flex items-center justify-center bg-white h-12 w-12 rounded-full text-brand"><i class="fab fa-discord text-2xl" aria-hidden="true"></i></a></span>
                         <a href="https://twitter.com/DudesClub_NFT" target="_blank" rel="noopener noreferrer nofollow" class="inline-flex items-center justify-center bg-white h-12 w-12 rounded-full text-brand"><i class="fab fa-twitter text-2xl" aria-hidden="true"></i></a>
 <!--                         <a href="https://opensea.io/collection/superrocks-nft" target="_blank" rel="noopener noreferrer nofollow" class="inline-flex items-center justify-center bg-white h-12 w-12 rounded-full text-brand"><img src="https://superrocksnft.com/images/opensea.png" alt="opensea logo"></a> -->
-                        <div class="hidden lg:block"><button class="uppercase rounded-full text-lg px-5 py-3 font-bold text-white bg-gradient-to-r from-navigationGradient-from to-navigationGradient-to hover:opacity-75" disabled="">Connet</button></div>
+                        <div class="hidden lg:block"><a class="uppercase rounded-full text-lg px-5 py-3 font-bold text-white bg-gradient-to-r from-navigationGradient-from to-navigationGradient-to hover:opacity-75" disabled="" href="https://dudesclubnft.xyz/mint">Connet</button></div>
                         <button class="text-white cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button"><i class="fas fa-bars" aria-hidden="true"></i></button>
                      </div>
                   </div>
